# InjSense

./: README.md  app.py  body_diagram.py  data_processor.py  dependencies.md  injury_prediction_model.joblib  prediction_model.py  pyproject.toml  utils.py
InjSense-Model/: README.md
InjSense-Model/data/: EMG_biomecanicaUPM_Mendely.xlsx  example_data.csv
InjSense-Model/src/: feature_extraction.py  predict.py  train_model.py
pages/: athlete_profiles.py  historical_data.py  settings.py  team_overview.py
