[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.44.1",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "pytz>=2025.2",
]
